@@ -1,9 +1,9 @@
 Package: grImport2
-Version: 0.1-3
+Version: 0.1-4
 Depends: R (>= 2.12.0)
 Imports: methods, grDevices, grid, XML, png, jpeg, base64enc
 Suggests: gridSVG, rsvg
-Title: Importing SVG Graphics
+Title: Importing 'SVG' Graphics
 Authors@R: c(person("Simon", "Potter", role = c("aut"),
                     email = "simon.potter@auckland.ac.nz"),
              person("Paul", "Murrell", role = c("ctb", "cre"),
@@ -11,11 +11,11 @@ Authors@R: c(person("Simon", "Potter", role = c("aut"),
                     comment = c(ORCID = "0000-0002-3224-8858")))
 Description: Functions for importing external vector images and
   drawing them as part of R plots.  This package is different from the
-  'grImport' package because, where that package imports PostScript
-  format images, this package imports SVG format images.  Furthermore,
-  this package imports a specific subset of SVG, so external images
-  must be pre-processed using a package like 'rsvg' to produce SVG
-  that this package can import.  SVG features that are not supported
+  'grImport' package because, where that package imports 'PostScript'
+  format images, this package imports 'SVG' format images.  Furthermore,
+  this package imports a specific subset of 'SVG', so external images
+  must be pre-processed using a package like 'rsvg' to produce 'SVG'
+  that this package can import.  'SVG' features that are not supported
   by R graphics, e.g., gradient fills, can be imported and then
   exported via the 'gridSVG' package.
 License: GPL (>= 2)
